getuserbyid, deleteuser, getallusers, dockerfile, swag docs
