# internal/api/router.go
@@ -1,5 +1,11 @@
 package api
 
 func SetRoutes(api *api) {
-	api.app.Post("/users", api.CreateNewUser)
+	group := api.app.Group("/users")
+
+	group.Put("", api.CreateNewUser)
+	group.Patch("/:id", api.UpdateUser)
+	group.Delete("/:id", api.DeleteUser)
+	group.Get("/:id", api.GetUserById)
+	group.Get("", api.GetAllUsers)
 }
